--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@koa/cors": "^5.0.0",
+    "axios": "^0.28.0",
     "vite": "^3.0.0"
   },
   "devDependencies": {
@@ -35,7 +37,6 @@
   "peerDependencies": {
     "vite": "^3.0.0"
   },
-
   "publishConfig": {
     "access": "public"
   }
