--- a/package.json
+++ b/package.json
@@ -13,7 +13,15 @@
   },
   "dependencies": {
     "@koa/cors": "^5.0.0",
-    "axios": "^0.28.0",
+    "@koa/router": "^12.0.1",
+    "axios": "^1.6.7",
+    "c2k": "^0.2.0",
+    "docz": "^2.4.0",
+    "koa": "^2.15.0",
+    "koa-connect": "^2.1.0",
+    "prismjs": "^1.29.0",
+    "react-docgen": "^7.0.3",
+    "react-markdown": "^9.0.1",
     "vite": "^3.0.0"
   },
   "devDependencies": {
