--- a/shouf-front/package.json
+++ b/shouf-front/package.json
@@ -18,6 +18,7 @@
     "ast-to-markdown": "^1.0.0",
     "debounce": "^2.0.0",
     "escodegen": "^2.1.0",
+    "fs": "^0.0.1-security",
     "object-path": "^0.11.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
