--- a/shouf/shouf-front/package.json
+++ b/shouf/shouf-front/package.json
@@ -16,6 +16,7 @@
     "@babel/standalone": "^7.23.10",
     "acorn": "^8.11.3",
     "ast-to-markdown": "^1.0.0",
+    "axios": "^1.6.8",
     "debounce": "^2.0.0",
     "escodegen": "^2.1.0",
     "fs": "^0.0.1-security",
