--- a/shouf/shouf-front/package.json
+++ b/shouf/shouf-front/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-live": "^4.1.6",
+    "react-syntax-highlighter": "^15.5.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
