--- a/shouf/shouf-front/package.json
+++ b/shouf/shouf-front/package.json
@@ -21,6 +21,7 @@
     "escodegen": "^2.1.0",
     "fs": "^0.0.1-security",
     "object-path": "^0.11.8",
+    "prop-type": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-live": "^4.1.6",
